<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBGDrawerHeader"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/actAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimens_10"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimens_17" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/actCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimens_10"
                android:text="@string/label_camera"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dimens_15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/actGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimens_10"
                android:text="@string/label_gallery"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dimens_15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical"
            android:padding="@dimen/dimens_5">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/acbCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimens_30"
                android:background="@color/colorTextNewSignup"
                android:padding="@dimen/dimens_5"
                android:text="@string/cancelb"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_17" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>