<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBGDrawerHeader"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/actAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimens_10"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimens_17" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/dimens_120"
                    android:layout_height="@dimen/dimens_120"
                    android:padding="@dimen/dimens_10"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_logout" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimens_5"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/acbCancel"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimens_30"
                        android:background="@color/colorTextNewSignup"
                        android:padding="@dimen/dimens_5"
                        android:text="@string/cancelb"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/textsize_17" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/acbLogout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimens_30"
                        android:background="@color/colorTextNewSignup"
                        android:padding="@dimen/dimens_5"
                        android:text="@string/logoutb"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/textsize_17" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>