<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_logout"
                        android:tint="@color/colorWhite" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/actLogout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimens_5"
                        android:text="@string/logoutb"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/dimens_15" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/dimens_130"
                    android:layout_height="@dimen/dimens_130"
                    android:padding="@dimen/dimens_10"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_logo"
                    android:tint="@color/colorWhite" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/actUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimens_1"
                    android:text="@string/label_username"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimens_15" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimens_5"
                        android:src="@drawable/ic_location"
                        android:tint="@color/colorWhite" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/actAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimens_5"
                        android:text="@string/label_address"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/dimens_15" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>